--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 <header style="width: 100%; height: 200px; background-color: blue;">
+    <div class="auth-block" style="float: right; margin-right: 30px;">
+        {% if app.user is not null %}
+        <h1>Hello {{ app.user.username }}</h1>
+        <span><a href="{{ path('app_logout') }}">Logout</a></span>
+        {% else %}
+        <a style="font-size: 20px; color: #000; padding-right: 20px" href="{{ path('register') }}">Registration</a>
+        <a style="font-size: 20px; color: #000;" href="">Login</a>
+        {% endif %}
+    </div>
     <h1 style="color: #fff; text-align: center; padding-top: 50px;">My To Do List</h1>
         <div class="row">
             <div class="col-md-8" style="display: block; margin: 0 auto">
@@ -18,14 +27,17 @@
             {% if tasks is not empty %}
                 {% for task in tasks %}
                 <li class="list-group-item {% if task.completed %}completed{% endif %}">
-                    <a href="{{ path('switch_task_status', {'id': task.id}) }}">{{ task.name }}</a>
+                    {% if task.completed %}&#9745;{% endif %}
+                    <a href="{{ path('switch_task_status', {'id': task.id}) }}">
+                        {{ task.name }}
+                    </a>
                     <a href="{{ path('delete_task', {'id': task.id}) }}">
-                        <span class="badge badge-primary badge-pill" style="float: right">X</span>
+                        <span class="" style="float: right">&#9747;</span>
                     </a>
                 </li>
                 {% endfor %}
             {% else %}
-                <h2 style="text-align: center">No tasks, please add one!</h2>
+                <h2 style="text-align: center">No tasks, please sign up add one!</h2>
             {% endif %}
         </ul>
     </div>
