--- a/templates/task_form/index.html.twig
+++ b/templates/task_form/index.html.twig
@@ -6,9 +6,7 @@
 <div class="col-12 col-sm pr-sm-0">
     {{ form_widget(form.name, {
         'attr' : {
-            'class': 'form-control',
-            'name': 'title',
-            'id': 'title',
+            'class': 'form-control'
         }
     })
     }}
