--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row centered-form">
             <div style="margin: 0 auto;">
-                <h3 style="margin-bottom: 20px;">Please sign up for ToDo List application</h3>
+                <h3 style="margin-bottom: 20px;">Sign up</h3>
                 {{ form_start(registration_form, {
                     'attr': {
                         'role': 'form'
