--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,38 @@
-body {
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #60a3bc !important;
+}
+header {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
+    background-color: blue;
+}
+header .auth-block {
+    margin-right: 30px;
+}
+header .auth-block .username {
+    font-size: 18px;
+    color: orange;
+}
+header .auth-block a {
+    font-size: 20px;
     color: #000;
+}
+header .auth-block .logout {
+    padding-left: 20px
+}
+header .todo-title {
+    padding-top: 70px;
+}
+header .task-form {
+    display: block;
+    overflow: hidden;
+    margin: 0 auto;
 }
 .task-list {
     display: block;
@@ -7,16 +40,90 @@ body {
     list-style: none;
     width: 100%;
 }
-.task-list li {
+.task-list .not-completed {
     display: block;
     overflow: hidden;
     width: 100%;
     background-color: #F8FAC4;
 }
+.task-list .not-completed:hover {
+    background-color: #FB8C70;
+}
+.task-delete-icon {
+    float: right;
+}
 .task-list .completed {
+    display: block;
+    overflow: hidden;
+    width: 100%;
     background-color: #FB8C00;
+}
+.task-list .completed .task-name {
+    text-decoration: line-through;
 }
 .task-list li a {
     color: #000;
     padding-left: 20px;
+}
+.user_card {
+    height: 400px;
+    width: 350px;
+    margin-top: auto;
+    margin-bottom: auto;
+    background: #f39c12;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+
+}
+.brand_logo_container {
+    position: absolute;
+    height: 170px;
+    width: 170px;
+    top: -75px;
+    border-radius: 50%;
+    background: #60a3bc;
+    padding: 10px;
+    text-align: center;
+}
+.brand_logo {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+.form_container {
+    margin-top: 100px;
+}
+.login_btn {
+    width: 100%;
+    background: #c0392b !important;
+    color: white !important;
+}
+.login_btn:focus {
+    box-shadow: none !important;
+    outline: 0 !important;
+}
+.login_container {
+    padding: 0 2rem;
+}
+.input-group-text {
+    background: #c0392b !important;
+    color: white !important;
+    border: 0 !important;
+    border-radius: 0.25rem 0 0 0.25rem !important;
+}
+.input_email,
+.input_pass:focus {
+    box-shadow: none !important;
+    outline: 0 !important;
+}
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #c0392b !important;
 }
